--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ doc/api/
 
 ===============================================================
 
-rROM: https://github.com/flutter/flutter/blob/master/.gitignore
+FROM: https://github.com/flutter/flutter/blob/master/.gitignore
 
 # Do not remove or rename entries in this file, only add new ones
 # See https://github.com/flutter/flutter/issues/128635 for more context.
